[gd_scene load_steps=6 format=3 uid="uid://bb0jfvecfuu5d"]

[ext_resource type="Script" uid="uid://cd6kovq6y3p8d" path="res://src/ui/battle_layer.gd" id="1_ihokf"]
[ext_resource type="PackedScene" uid="uid://caoneprh3fic" path="res://prefabs/ui/inventory_carousel.tscn" id="2_p1w5e"]
[ext_resource type="FontFile" uid="uid://bexj87qb2mllv" path="res://assets/fonts/not_jam/giant_ui/Not Jam Giant UI 22.ttf" id="2_xybdf"]
[ext_resource type="Texture2D" uid="uid://chobkko7ab520" path="res://assets/ui/bottom_shadow_alt.png" id="3_ihokf"]

[sub_resource type="LabelSettings" id="LabelSettings_v2g41"]
font = ExtResource("2_xybdf")
font_size = 22
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="BattleLayer" type="CanvasLayer"]
script = ExtResource("1_ihokf")
wheel_slice_count = 4
explanation_good_color = Color(0.564706, 1, 0.564706, 1)
explanation_neutral_color = Color(0.501961, 0.501961, 0.501961, 1)
explanation_bad_color = Color(0.8, 0.12549, 0.12549, 1)

[node name="BattleMenu" type="Control" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BattleMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="BattleMenu/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BattleMenu/MarginContainer/Control"]
custom_minimum_size = Vector2(0, 230)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 230.0
grow_horizontal = 2

[node name="Wheel" type="Control" parent="BattleMenu/MarginContainer/Control/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(230, 230)
layout_mode = 2

[node name="WheelWedges" type="Control" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Wheel"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WheelSlices" type="Control" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Wheel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Demon" type="Control" parent="BattleMenu/MarginContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Explanation" type="HBoxContainer" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="PageMult" type="Control" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer/Explanation"]
custom_minimum_size = Vector2(88, 44)
layout_mode = 2

[node name="PageMultLabel" type="Label" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer/Explanation/PageMult"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(44, 11.5)
text = "1"
label_settings = SubResource("LabelSettings_v2g41")
horizontal_alignment = 1
vertical_alignment = 1

[node name="x" type="Label" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer/Explanation"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
text = "x"
label_settings = SubResource("LabelSettings_v2g41")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DemonMult" type="Control" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer/Explanation"]
custom_minimum_size = Vector2(88, 44)
layout_mode = 2

[node name="DemonMultLabel" type="Label" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer/Explanation/DemonMult"]
unique_name_in_owner = true
custom_minimum_size = Vector2(44, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(44, 11.5)
text = "1"
label_settings = SubResource("LabelSettings_v2g41")
horizontal_alignment = 1
vertical_alignment = 1

[node name="=" type="Label" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer/Explanation"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
text = "="
label_settings = SubResource("LabelSettings_v2g41")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Result" type="Control" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer/Explanation"]
custom_minimum_size = Vector2(88, 44)
layout_mode = 2

[node name="ResultLabel" type="Label" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer/Explanation/Result"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(44, 11.5)
text = "1"
label_settings = SubResource("LabelSettings_v2g41")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleHealth" type="ColorRect" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="BattleHealthFill" type="ColorRect" parent="BattleMenu/MarginContainer/Control/HBoxContainer/Demon/VBoxContainer/BattleHealth"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="InventoryCarousel" parent="BattleMenu" instance=ExtResource("2_p1w5e")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="BattleMenu"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("3_ihokf")
expand_mode = 1

[connection signal="item_pressed" from="BattleMenu/InventoryCarousel" to="." method="_on_inventory_carousel_item_pressed"]
